# rinha-2024-q1-rust

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
