[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-postgres = "0.4.0"
actix-web = "4.5.1"
bb8-postgres = "0.8.1"
envy = "0.4.2"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
postgres = "0.19.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
